--- a/src/App.css
+++ b/src/App.css
@@ -51,7 +51,7 @@ header{
   width: 100%;
   height: 100%;
 }
-h5 , h1 , h2,h3,h4,h6,p{
+h5 , h1 , h2,h3,h4,h6{
   text-decoration: none;
   margin-bottom: 0 !important;
 }
@@ -270,7 +270,7 @@ span{
 width: 100%;
 height: 350px;
 padding: 2rem 7rem;
-border: 1px solid gainsboro;
+/* border: 1px solid gainsboro; */
 }
 .section__inscription__content{
   width: 100%;
@@ -279,7 +279,7 @@ border: 1px solid gainsboro;
   display: flex;
   align-items: center;
   justify-content: center;
-  border: 1px solid gainsboro;
+  /* border: 1px solid gainsboro; */
   background-color: rgb(15, 52, 90);
   border-radius: 0.7rem;
 }
@@ -318,7 +318,7 @@ border: 1px solid gainsboro;
 }
 .btn__inscription__first{
   padding: 0.5rem;
-  border: 1px solid gainsboro;
+  /* border: 1px solid gainsboro; */
   border-radius: 0.7rem;
   background-color: #f0c14b;
   color: white;
@@ -326,16 +326,40 @@ border: 1px solid gainsboro;
 }
 .section__outlet{
   width: 100%;
-  height: 400px;
+  height: 500px;
 padding: 1rem 7rem;
-  border: 1px solid gainsboro;
+background-image: url('../public/doum.jpg');
+background-position: center;
+background-repeat: no-repeat;
+background-size: cover;
+object-fit: cover;
 }
 .section__outlet__container{
   width: 100%;
   height: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
   padding: 1rem;
-  border: 1px solid gainsboro;
-
+  /* border: 1px solid gainsboro; */
+}
+.section__outlet__detail{
+  width: 300px;
+  padding: 0.5rem;
+  margin: 1rem;
+  /* border: 1px solid gainsboro; */
+}
+.outlet__title{
+  font-weight: bold;
+  margin-bottom: 1rem;
+  font-size: 1.5rem;
+}
+.section__outlet__detail > p{
+  margin-bottom: 0 !important;
+}
+.outlet__description:hover{
+  color: coral;
+  cursor: pointer;
 }
 .part__newsletter{
   width: 100%;
