--- a/src/App.css
+++ b/src/App.css
@@ -400,7 +400,6 @@ object-fit: cover;
   justify-content: space-around;
   /* border: 1px solid coral; */
 }
-
 .btn__newsletter{
   padding: 1rem;
   background-color: #4a4a4a;
@@ -421,8 +420,108 @@ object-fit: cover;
   background-color:coral;
 }
 
-
-
+.container__header{
+  width: 100%;
+  height: 400px;
+  background-image: url('https://www.hepl.be/themes/custom/hepl/images/bannieres/bacheliers-masters.jpg');
+  /* border: 1px solid coral; */
+}
+.container__description{
+  width: 330px;
+  height: 100%;
+  margin-left: 5rem;
+  padding: 0.5rem;
+  display: flex;
+  align-items: end;
+  justify-content: center;
+  backdrop-filter: blur(2rem);
+  /* border: 1px solid coral; */
+  color: white;
+}
+.container__formations{
+  width: 100%;
+  /* height: 500px; */
+  padding: 1rem;
+  /* border: 1px solid coral; */
+}
+.container__formations__header{
+  width: 100%;
+  /* border: 1px solid coral; */
+}
+.container__formations__first{
+  width: 100%;
+  height: 50px;
+  font-style: italic;
+  font-weight: bold;
+  color:rgb(15, 52, 90);
+  /* border: 1px solid coral; */
+}
+.container__formations__second{
+  width: 100%;
+  height: 50px;
+  color:rgb(15, 52, 90);
+  text-align: end;
+  font-style: italic;
+  font-weight: bold;
+  /* border: 1px solid coral; */
+}
+.container__filter__search{
+  width: 100%;
+  height: 50px;
+  border: 1px solid coral;
+}
+.main__part__formations{
+  width: 100%;
+  /* height: 700px; */
+  /* border: 1px solid coral; */
+}
+.formations__cards{
+  width: 100%;
+  /* height: 300px; */
+  padding: 0.5rem;
+  /* border: 1px solid coral; */
+}
+.box__cards{
+  width: 100%;
+  display: flex;
+  align-items: center;
+  /* justify-content: center; */
+}
+.cards{
+  width: 370px;
+  height: 180px;
+  margin: 0.5rem 0;
+  border-radius: 0.5rem;
+  background-color: #d8a765;
+  position: relative;
+  margin-right: 0.7rem;
+  /* border: 1px solid coral; */
+}
+.cards img{
+ width: 100%;
+ height: 100%;
+}
+/* .cards img:hover{
+  width: 100%;
+  height: 100%;
+  transform: scale(0.8);
+} */
+.cards__header{
+ font-size: 1.5rem;
+ font-weight: bold;
+}
+.cards__title{
+  position: absolute;
+  top: 50%;
+  transform: translateY(-50%);
+  z-index: 200;
+  color: white;
+  display: block;
+  text-align: center;
+  width: 100%;
+  font-size: 1.2rem;
+  font-weight: bold;
+}
 .footer{
   width: 100%;
   padding: 10px 170px;
