--- a/src/App.css
+++ b/src/App.css
@@ -467,8 +467,8 @@ object-fit: cover;
 }
 .container__filter__search{
   width: 100%;
-  height: 50px;
-  border: 1px solid coral;
+  height: 70px;
+  /* border: 1px solid coral; */
 }
 .main__part__formations{
   width: 100%;
@@ -485,14 +485,15 @@ object-fit: cover;
   width: 100%;
   display: flex;
   align-items: center;
+  flex-wrap: wrap;
   /* justify-content: center; */
 }
 .cards{
-  width: 370px;
-  height: 180px;
+  width: 300px;
+  height: 150px;
   margin: 0.5rem 0;
   border-radius: 0.5rem;
-  background-color: #d8a765;
+  background-color: rgb(12, 52, 103);
   position: relative;
   margin-right: 0.7rem;
   /* border: 1px solid coral; */
@@ -528,7 +529,7 @@ object-fit: cover;
   /* background-color:rgb(12, 52, 103); */
   color: rgb(12, 52, 103);
   font-weight: bold;
-  background-color: rgb(245, 242, 242);
+  /* background-color: rgb(245, 242, 242); */
 }
 .footer__title{
   font-weight: bold;
