--- a/src/App.css
+++ b/src/App.css
@@ -269,7 +269,7 @@ span{
 .section__inscription{
 width: 100%;
 height: 350px;
-padding: 2rem 7rem;
+/* padding: 2rem 7rem; */
 /* border: 1px solid gainsboro; */
 }
 .section__inscription__content{
@@ -281,21 +281,21 @@ padding: 2rem 7rem;
   justify-content: center;
   /* border: 1px solid gainsboro; */
   background-color: rgb(15, 52, 90);
-  border-radius: 0.7rem;
+  /* border-radius: 0.7rem; */
 }
 .section__inscription__left{
   width: 50%;
   height: 100%;
-  padding: 1rem 7rem;
+  padding: 1rem 5rem;
   /* border: 1px solid gainsboro; */
   display: flex;
   align-items: center;
   justify-content: center;
-  border-radius: 0.7rem;
+  /* border-radius: 0.7rem; */
   color: white;
 }
 .section__inscription__left__img{
-  width: 200px;
+  width: 130px;
   height: 85px;
   /* border: 1px solid gainsboro; */
   border-radius: 0.7rem;
@@ -310,10 +310,10 @@ padding: 2rem 7rem;
 .section__inscription__right{
   width: 50%;
   height: 100%;
-  padding: 3rem 3rem;
+  padding: 7rem 5rem;
   /* border: 1px solid gainsboro; */
   background-color: rgb(15, 52, 90);
-  border-radius: 0.7rem;
+  /* border-radius: 0.7rem; */
   color: white;
 }
 .btn__inscription__first{
@@ -424,6 +424,18 @@ object-fit: cover;
   width: 100%;
   height: 400px;
   background-image: url('https://www.hepl.be/themes/custom/hepl/images/bannieres/bacheliers-masters.jpg');
+  /* border: 1px solid coral; */
+}
+.container__header__continue{
+  width: 100%;
+  height: 400px;
+  background-image: url('https://www.hepl.be/sites/default/files/images/bannieres/Formations%20continues%202000x400_0.jpg');
+  /* border: 1px solid coral; */
+}
+.container__header__campus{
+  width: 100%;
+  height: 400px;
+  background-image: url('https://www.hepl.be/themes/custom/hepl/images/bannieres/nos-campus.jpg');
   /* border: 1px solid coral; */
 }
 .container__description{
@@ -632,6 +644,39 @@ object-fit: cover;
   color: rgb(15, 52, 90);
   text-decoration: none;
 }
+.container__description__continue{
+  width: 100%;
+  height: 400px;
+  padding: 1rem;
+  display: flex;
+  align-items: center;
+  justify-content: space-around;
+  flex-wrap: wrap;
+  /* border: 1px solid coral; */
+}
+.description__continue__cards{
+  width: 300px;
+  height: 250px;
+  /* border: 1px solid coral; */
+}
+.description__continue__cards img{
+  width: 100%;
+  height: 160px;
+  /* border: 1px solid coral; */
+}
+.description__continue__cards:nth-child(2){
+  width: 500px;
+  height: 250px;
+  /* border: 1px solid coral; */
+}
+.continue__title{
+font-size: 2rem;
+text-align: center;
+width: 100%;
+height: 90px;
+color: rgb(15, 52, 90);
+background-color: gainsboro;
+}
 .main--contact{
   width: 100%;
   padding: 0.7rem;
@@ -639,7 +684,6 @@ object-fit: cover;
   background-repeat: no-repeat;
   background-size: cover;
   animation: fadeInUp .7s linear;
-  
   background-image: url('https://img.freepik.com/photos-premium/contactez-nous-concept-telephone-symbole-bloc-bois-courrier-adresse-bureau_52701-83.jpg?w=1060');
 }
 .main--contact--content{
