--- a/src/App.css
+++ b/src/App.css
@@ -30,7 +30,7 @@ header{
   border-bottom: 1px solid gainsboro;
 }
 .navbar{
-  width: 95%;
+  width: 100%;
   /* height: 90%; */
   display: flex;
   border-radius: 1rem;
@@ -59,7 +59,7 @@ span{
   color: #f0c14b;
 }
 .navbar--center{
-  width: 60%;
+  width: 55%;
   height: 100%;
   display: flex;
   align-items: center;
@@ -67,15 +67,22 @@ span{
   /* border: 1px solid coral; */
 }
 .navbar--center--content{
+  height: 100%;
   display: flex;
   align-items: center;
   justify-content: center;
   /* border: 1px solid coral; */
   width: 100%;
 }
+.navbar--center--content p{
+  margin-bottom: 0 !important;
+}
 .navbar--right{
-  width: 20%;
-  border: 1px solid coral;
+  width: 25%;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  /* border: 1px solid coral; */
 }
 .header__bar{
   width: 100%;
@@ -110,6 +117,31 @@ span{
 }
 .liste > i{
   font-size: 1rem;
+}
+.btn__connexion{
+  padding: 0.5rem;
+  color: white;
+  border-radius: 0.5rem;
+  background-color: #d8a765;
+}
+.btn__search{
+  padding: 0.4rem;
+  border-radius: 0.5rem;
+  margin: 0.3rem;
+}
+.block__search{
+  width: 77%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+input[type='search']{
+  border: 1px solid gainsboro;
+  border-radius: 0.5rem;
+  
+}
+input[type='search']:hover{
+  border: 1px solid rgb(41, 41, 101);
 }
 .menu-top-container{
   width: 100%;
@@ -438,6 +470,12 @@ object-fit: cover;
   background-image: url('https://www.hepl.be/themes/custom/hepl/images/bannieres/nos-campus.jpg');
   /* border: 1px solid coral; */
 }
+.container__header__mb{
+  width: 100%;
+  height: 400px;
+  background-image: url('https://www.hepl.be/sites/default/files/images/bannieres/Vous%20inscrire%20GettyImages-516895018%202000x400.jpg');
+  /* border: 1px solid coral; */
+}
 .container__description{
   width: 330px;
   height: 100%;
@@ -446,15 +484,32 @@ object-fit: cover;
   display: flex;
   align-items: end;
   justify-content: center;
-  backdrop-filter: blur(2rem);
+  backdrop-filter: blur(2.5rem);
+  text-shadow: 1px 1px 2px grey;
+  opacity: 1;
+  /* background-color: rgba(15, 52, 90, 0.9); */
   /* border: 1px solid coral; */
   color: white;
 }
+.fgh{
+  position: absolute;
+  top: 24px;
+  z-index: 600;
+  color: white;
+  display: block;
+  text-align: center;
+  width: 100%;
+  font-weight: bold;
+  text-shadow: 1px 1px 2px grey;
+  opacity: 1;
+  padding: 0.7rem;
+  background-color: rgb(15, 52, 90);
+  background-color: rgba(0,128,160,0.5);
+}
 .container__formations{
   width: 100%;
-  /* height: 500px; */
+   height: 500px;
   padding: 1rem;
-  /* border: 1px solid coral; */
 }
 .container__formations__header{
   width: 100%;
@@ -655,8 +710,9 @@ object-fit: cover;
   /* border: 1px solid coral; */
 }
 .description__continue__cards{
-  width: 300px;
+  width: 320px;
   height: 250px;
+  /* padding: 0.5rem; */
   /* border: 1px solid coral; */
 }
 .description__continue__cards img{
@@ -670,12 +726,106 @@ object-fit: cover;
   /* border: 1px solid coral; */
 }
 .continue__title{
-font-size: 2rem;
+font-size: 1.7rem;
 text-align: center;
 width: 100%;
-height: 90px;
+height: 50px;
 color: rgb(15, 52, 90);
 background-color: gainsboro;
+}
+.campus__header{
+  width: 100%;
+  margin: 1rem 0;
+  padding: 1rem;
+  text-align: center;
+  /* border: 1px solid cadetblue; */
+}
+.campus__header__title{
+  font-weight: bold;
+  font-style: italic;
+  color: rgb(15, 52, 90);
+}
+.container__description__campus{
+  width: 100%;
+  padding: 1rem;
+  display: flex;
+  align-items: center;
+  justify-content: space-around;
+  flex-wrap: wrap;
+}
+.campus__cards{
+  width: 300px;
+  height: 400px;
+  margin: 0.5rem;
+  position: relative;
+  /* border: 1px solid cadetblue; */
+}
+.campus__cards img{
+  width: 100%;
+  height: 100%;
+}
+.campus__title{
+  position: absolute;
+  top: 24px;
+  z-index: 600;
+  color: white;
+  display: block;
+  text-align: center;
+  width: 100%;
+  font-weight: bold;
+  text-shadow: 1px 1px 2px grey;
+  opacity: 1;
+  padding: 0.7rem;
+  background-color: rgb(15, 52, 90);
+  /* background-color: rgba(0,128,160,0.7); */
+}
+.container__description__inscription{
+  width: 100%;
+  padding: 1rem;
+  display: flex;
+  align-items: center;
+  justify-content: space-around;
+  flex-wrap: wrap;
+  /* border: 1px solid coral; */
+}
+.container__process{
+  width: 100%;
+  height: 400px;
+  /* border: 1px solid coral; */
+}
+.process__content{
+  width: 100%;
+  padding: 0.7rem;
+  display: flex;
+  align-items: center;
+  justify-content: space-around;
+  flex-wrap: wrap;
+  /* border: 1px solid coral; */
+}
+.description__process{
+  width: 520px;
+  height: 250px;
+}
+.description__process img{
+  width: 100%;
+  height: 160px;
+}
+.process__title{
+  font-size: 1.7rem;
+text-align: center;
+width: 100%;
+height: 50px;
+background-color: #d8a765;
+color: rgb(15, 52, 90);
+}
+.incription__header{
+  margin: 1rem 0;
+}
+.btn__support{
+  padding: 0.5rem;
+  color: white;
+  margin: 1rem 0;
+  background-color: #d8a765;
 }
 .main--contact{
   width: 100%;
