--- a/src/App.css
+++ b/src/App.css
@@ -476,6 +476,12 @@ object-fit: cover;
   background-image: url('https://www.hepl.be/sites/default/files/images/bannieres/Vous%20inscrire%20GettyImages-516895018%202000x400.jpg');
   /* border: 1px solid coral; */
 }
+.container__header__student{
+  width: 100%;
+  height: 400px;
+  background-image: url('https://images.unsplash.com/photo-1549057446-9f5c6ac91a04?q=80&w=1934&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D');
+  /* border: 1px solid coral; */
+}
 .container__description{
   width: 330px;
   height: 100%;
@@ -484,7 +490,7 @@ object-fit: cover;
   display: flex;
   align-items: end;
   justify-content: center;
-  backdrop-filter: blur(2.5rem);
+  backdrop-filter: blur(1.5rem);
   text-shadow: 1px 1px 2px grey;
   opacity: 1;
   /* background-color: rgba(15, 52, 90, 0.9); */
@@ -826,6 +832,28 @@ color: rgb(15, 52, 90);
   color: white;
   margin: 1rem 0;
   background-color: #d8a765;
+}
+.container__description__student{
+  width: 100%;
+  padding: 0.7rem;
+  display: flex;
+  align-items: center;
+  justify-content:space-around;
+  flex-wrap: wrap;
+}
+.description__student__life{
+  width: 380px;
+  height: 270px;
+  border-radius: 0.7rem;
+}
+.description__student__life img{
+  width: 100%;
+  height: 190px;
+  border-radius: 0.7rem;
+}
+.student__title{
+  text-align: center;
+  font-weight: bold;
 }
 .main--contact{
   width: 100%;
